Bug 359163 - Emails fail with "Invalid 'From' email address." message.
Summary: Emails fail with "Invalid 'From' email address." message.
Status: CLOSED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-09 03:38 UTC by Arch Murphy
Modified: 2020-08-17 23:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
arch.vcf (280 bytes, text/x-vcard)
2016-02-16 00:23 UTC, Arch Murphy
Details
calendar.ics (10.86 KB, text/calendar)
2016-02-21 06:57 UTC, Arch Murphy
Details
kalarmrc (1.10 KB, text/plain)
2016-02-21 06:57 UTC, Arch Murphy
Details
arch.vcf (280 bytes, text/x-vcard)
2016-02-21 06:57 UTC, Arch Murphy
Details
arch.vcf (280 bytes, text/x-vcard)
2016-02-22 00:37 UTC, Arch Murphy
Details
arch.vcf (280 bytes, text/x-vcard)
2016-02-23 00:47 UTC, Arch Murphy
Details
arch.vcf (280 bytes, text/x-vcard)
2016-05-09 20:40 UTC, Arch Murphy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arch Murphy 2016-02-09 03:38:54 UTC
Kalarm version 4.14.16

Kalarm sends email ok using the try button on the "Edit Email Alarm - KAlarm" window.

When running in the background and alarm time is reached and error window is displayed:

Failed to send email:
Invalid 'From' email address.
Email identity "30,593,973" not found

KAlarm is configured to use sendmail and the try button works fine to send the desired e-mail but e-mail sending fails when KAlarm tries to send alarm e-mails automatically.

Reproducible: Always

Steps to Reproduce:
1. Configure kalarm to send e-mail alarm using sendmail.
2. Test e-mail with try button on config screen.
3. Allow kalarm to run in background and automatically send e-mail.

Actual Results:  
Failed to send email:
Invalid 'From' email address.
Email identity "30,593,973" not found

Expected Results:  
Expected an e-mail to be sent.
Comment 1 David Jarvie 2016-02-15 23:27:25 UTC
Which option is selected for your 'from' email address configured In KAlarm's settings dialog? (Use menu Settings -> Configure KAlarm -> Email.)
Comment 2 Arch Murphy 2016-02-16 00:23:39 UTC
Created attachment 97241 [details]
arch.vcf

Email client: set to sendmail
Email address: uppermost button with text "arch@longehad.com.au" 
(without quotes) in text box.


On 16/02/16 09:27, David Jarvie via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=359163
>
> --- Comment #1 from David Jarvie <djarvie@kde.org> ---
> Which option is selected for your 'from' email address configured In KAlarm's
> settings dialog? (Use menu Settings -> Configure KAlarm -> Email.)
>
Comment 3 David Jarvie 2016-02-18 21:18:36 UTC
I tried out an email alarm with the email address configured in the same way as yours in the settings, but it was sent successfully.

Could you please set up an email alarm and then attach your KAlarm configuration file (in ~/.kde/share/config/kalarmrc or ~/.config/kalarmrc or some similar directory), and also your calendar file (to find out its location, select menu View -> Show Calendars, and then right click on the active alarm calendar and select Show Details - the location is labelled "File:"). If you want to hide personal information in the calendar file, just replace it with other text before attaching the file.
Comment 4 Arch Murphy 2016-02-21 06:57:33 UTC
Created attachment 97321 [details]
calendar.ics

Have many email alarms setup already - previously all worked fine with FC18.

Files attached as requested.


On 19/02/16 07:18, David Jarvie via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=359163
>
> --- Comment #3 from David Jarvie <djarvie@kde.org> ---
> I tried out an email alarm with the email address configured in the same way as
> yours in the settings, but it was sent successfully.
>
> Could you please set up an email alarm and then attach your KAlarm
> configuration file (in ~/.kde/share/config/kalarmrc or ~/.config/kalarmrc or
> some similar directory), and also your calendar file (to find out its location,
> select menu View -> Show Calendars, and then right click on the active alarm
> calendar and select Show Details - the location is labelled "File:"). If you
> want to hide personal information in the calendar file, just replace it with
> other text before attaching the file.
>
Comment 5 Arch Murphy 2016-02-21 06:57:35 UTC
Created attachment 97322 [details]
kalarmrc
Comment 6 Arch Murphy 2016-02-21 06:57:35 UTC
Created attachment 97323 [details]
arch.vcf
Comment 7 David Jarvie 2016-02-21 12:56:45 UTC
The attachment in comment 6 is not KAlarm's calendar file. The file I need is called calendar.ics (unless you have selected a different name for it). If you're not sure which file to attach, follow the instructions in comment 3 to find it.
Comment 8 Arch Murphy 2016-02-22 00:37:06 UTC
Created attachment 97346 [details]
arch.vcf

Sorry if I have caused confusion. I followed the instructions to find 
the calendar file and the attached file is called calendar.ics. I opened 
my original sent email and it looks like Thunderbird email interpreted 
the file as and email appointment for a meeting (or something). If I 
open the attached calendar.ics, in my sent email, with Emacs it shows 
the original file. Not sure what you are seeing at your end. Hope the 
above helps.

On 21/02/16 22:56, David Jarvie via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=359163
>
> --- Comment #7 from David Jarvie <djarvie@kde.org> ---
> The attachment in comment 6 is not KAlarm's calendar file. The file I need is
> called calendar.ics (unless you have selected a different name for it). If
> you're not sure which file to attach, follow the instructions in comment 3 to
> find it.
>
Comment 9 David Jarvie 2016-02-23 00:04:23 UTC
Sorry, I didn't notice that you attached calendar.ics in comment 4.

This is puzzling - when I set my config to match yours, I don't see the fault occurring. Could you please help with some more information:

1) When you bring up the dialog to edit a new email alarm, does it show a 'From' field at the top (a combo box rather than an edit field), above the 'To' field?

2) Which version of Fedora are you running? If you are running a KDE desktop, is it KDE 4 or Plasma 5?
Comment 10 Arch Murphy 2016-02-23 00:47:32 UTC
Created attachment 97368 [details]
arch.vcf

1) The "New Email Alarm - Kalarm" dialog starts with "Action" text 
followed (below) by "To:" with text box then (below) "Subject:" with 
text box then big white area for email body text. There is no "From:" field.

2) OS is Fedora 23. KDE is Plasma 5.

On 23/02/16 10:04, David Jarvie via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=359163
>
> --- Comment #9 from David Jarvie <djarvie@kde.org> ---
> Sorry, I didn't notice that you attached calendar.ics in comment 4.
>
> This is puzzling - when I set my config to match yours, I don't see the fault
> occurring. Could you please help with some more information:
>
> 1) When you bring up the dialog to edit a new email alarm, does it show a
> 'From' field at the top (a combo box rather than an edit field), above the 'To'
> field?
>
> 2) Which version of Fedora are you running? If you are running a KDE desktop,
> is it KDE 4 or Plasma 5?
>
Comment 11 David Jarvie 2016-05-09 17:05:59 UTC
I've tried using sendmail on a Fedora 23 system, with both a Plasma 5 desktop and an XFCE desktop, but KAlarm reported sending the email successfully.

Do you have any KDE email identities configured? The config file containing them is ~/.kde/share/config/emailidentities. They would normally be set up by configuring them in KMail.
Comment 12 Arch Murphy 2016-05-09 20:40:28 UTC
Created attachment 98872 [details]
arch.vcf

Have just checked e-mail identities file. Here is a copy:

$ cat emailidentities
[$Version]
update_info=kmail.upd:3.3-move-identities-to-own-file,kmail.upd:3.3-aegypten-emailidentities-split-sign-encr-keys

[General]
Default Identity=1498756604

[Identity #0]
Attach Vcard=false
Default Domain=office.longhead.com.au
Dictionary=English (United States of America)
Disable Fcc=false
Drafts=15
Email Address=arch@longhead.com.au
Email Aliases=
Fcc=9
Identity=arch@longhead.com.au
Image Location=
Inline Signature=
Inlined Html=false
Name=Arch Murphy
Organization=Longhead Research Australia
Pgp Auto Sign=false
Preferred Crypto Message Format=auto
Signature Enabled=false
Signature Type=inline
Templates=17
VCardFile=/home/arch/.kde/share/apps/kmail2/arch@longhead.com.au.vcf
X-FaceEnabled=false
uoid=1498756604

Not sure if this should play a part when sendmail is configured as mail 
client?


On 10/05/16 03:05, David Jarvie via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=359163
>
> --- Comment #11 from David Jarvie <djarvie@kde.org> ---
> I've tried using sendmail on a Fedora 23 system, with both a Plasma 5 desktop
> and an XFCE desktop, but KAlarm reported sending the email successfully.
>
> Do you have any KDE email identities configured? The config file containing
> them is ~/.kde/share/config/emailidentities. They would normally be set up by
> configuring them in KMail.
>
Comment 13 David Jarvie 2016-05-11 23:42:27 UTC
I tried setting up my config similar to your emailidentities, but I still didn't see the fault, until I edited my calendar.ics to include the property

X-KDE-KALARM-FLAGS:EMAILID\;30593973

for my email alarm. This wasn't present in my calendar, but I noticed that it is present in the calendar you attached previously in all but one email alarm. After adding that property the fault occurred.

I'll need to investigate why your alarms contain that property.
Comment 14 David Jarvie 2016-06-02 20:08:28 UTC
To avoid any doubt, can you please confirm a couple of details:

1) You said that it worked correctly in FC18. Does this mean Fedora 18 (which included KDE 4.9)?

2) Has the fault occurred with new email alarms created on your current OS? And were they created using the alarm edit dialog? (This is to be sure that the fault doesn't only happen for alarms previously created in FC18, and that the faulty alarms were not created via the command line or other non-dialog methods.)
Comment 15 David Jarvie 2016-06-11 17:02:32 UTC
I realise that KAlarm should always use the current configuration setting for email sender address, so if an email address is typed in the "From" email configuration setting, that should be used even if the alarm was originally set up to use a KMail identity. If things are done correctly, the error you have seen will only happen if "Use KMail identities" is selected in the settings dialog. Note that this bug was not related to whether or not 'sendmail' was selected.
Comment 16 David Jarvie 2016-06-11 17:03:46 UTC
Git commit 99b6b56dc21716ad872d268d3902f5836aee588d by David Jarvie.
Committed on 11/06/2016 at 16:44.
Pushed by djarvie into branch 'Applications/16.04'.

Bug 359163: Use current email address preference setting

If an email alarm was configured to use a KMail sender ID but the
current email sender address preference setting is to use a hard
coded email address, KAlarm still used the KMail sender ID, and
furthermore email sending failed with an error message if the ID
was no longer valid.

This fix makes KAlarm use the current email sender address preference
setting, so that an invalid sender ID only causes an error if the
current setting is to use the KMail sender ID.

M  +4    -4    kalarm/kamail.cpp

http://commits.kde.org/kdepim/99b6b56dc21716ad872d268d3902f5836aee588d
Comment 17 David Jarvie 2016-06-11 17:12:12 UTC
Git commit 1ff59b185cb90b8f0045c3fcfa73e7f5ba6541a5 by David Jarvie.
Committed on 11/06/2016 at 17:08.
Pushed by djarvie into branch 'KDE/4.14'.

Bug 359163: Use current email address preference setting

If an email alarm was configured to use a KMail sender ID but the
current email sender address preference setting is to use a hard
coded email address, KAlarm still used the KMail sender ID, and
furthermore email sending failed with an error message if the ID
was no longer valid.

This fix makes KAlarm use the current email sender address preference
setting, so that an invalid sender ID only causes an error if the
current setting is to use the KMail sender ID.

M  +4    -4    kalarm/kamail.cpp

http://commits.kde.org/kdepim/1ff59b185cb90b8f0045c3fcfa73e7f5ba6541a5