Bug 359163: Use current email address preference setting

If an email alarm was configured to use a KMail sender ID but the
current email sender address preference setting is to use a hard
coded email address, KAlarm still used the KMail sender ID, and
furthermore email sending failed with an error message if the ID
was no longer valid.

This fix makes KAlarm use the current email sender address preference
setting, so that an invalid sender ID only causes an error if the
current setting is to use the KMail sender ID.

BUG: 359163